--- a/part_1_mars_news.ipynb
+++ b/part_1_mars_news.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -10,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -31,6 +32,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -43,14 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Visit the Mars news site\n"
+    "# Visit the Mars news site\n",
+    "url = 'https://static.bc-edx.com/data/web/mars_news/index.html'\n",
+    "browser.visit(url)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -61,23 +66,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a Beautiful Soup object\n"
+    "# Create a Beautiful Soup object\n",
+    "html = browser.html\n",
+    "soup = soup(html, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract all the text elements\n"
+    "# Extract all the text elements\n",
+    "list_text = soup.find_all('div', class_ = 'list_text')"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -100,28 +109,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create an empty list to store the dictionaries\n"
+    "# Create an empty list to store the dictionaries\n",
+    "articles = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loop through the text elements\n",
-    "# Extract the title and preview text from the elements\n",
-    "# Store each title and preview pair in a dictionary\n",
-    "# Add the dictionary to the list\n"
+    "for item in list_text:\n",
+    "    # Extract the title and preview text from the elements\n",
+    "    title = item.find('div', class_='content_title').text\n",
+    "    preview = item.find('div', class_='article_teaser_body').text\n",
+    "    # Store each title and preview pair in a dictionary\n",
+    "    news_item = {'title': title, 'preview': preview}\n",
+    "    # Add the dictionary to the list\n",
+    "    articles.append(news_item)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -159,18 +174,19 @@
        "  'preview': '“Selfie” of the Curiosity rover with inset showing the SAM instrument prior to installation on the rover.'}]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Print the list to confirm success\n"
+    "# Print the list to confirm success\n",
+    "articles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,10 +195,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Optionally, store the scraped data in a file (to ease sharing the data with others). To do so, export the scraped data to a JSON file.\n",
+    "import json\n",
+    "\n",
+    "with open('articles.json', 'w') as f:\n",
+    "    json.dump(articles, f)"
+   ]
   }
  ],
  "metadata": {
@@ -201,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
